--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,7 +14,12 @@
  *= require_self
  */
 
-
+@import "bootstrap";
+@import 'modules/variables';
+//@import 'modules/text-animation';
+//@import 'modules/hero-slider';
+@import 'modules/mixin';
+@import "scrool";
 @import "breakpoints/base";
 
 @media (min-width: 480px) {
@@ -37,6 +42,7 @@
 ,(-webkit-min-device-pixel-ratio: 2) {
   @import "breakpoints/2x";
 }
+
 .swiper-container {
   width: 100%;
   height: 300px;
