Added scrolling function

--- a/app/views/previews/_scrool.html.erb
+++ b/app/views/previews/_scrool.html.erb
@@ -1,4 +1,4 @@
-<div class="child"></div>
+<div class="child"id =child></div>
 <div id="margin">
   <div></div>
 </div>
@@ -8,8 +8,10 @@
 <!--        entries.forEach(entry => {-->
 <!--            if (entry.isIntersecting) {-->
 <!--                console.log('inview')-->
+<!--                entry.target.classList.add('inview');-->
 <!--            } else {-->
 <!--                console.log('out view')-->
+<!--                entry.target.classList.remove('inview');-->
 <!--            }-->
 <!--        });-->
 <!--    }-->
