--- a/app/assets/stylesheets/_practice.scss
+++ b/app/assets/stylesheets/_practice.scss
@@ -12,11 +12,11 @@
     left: 110px;
   }
 }
-body {
-  width: 100%;
-  height: 300vh;
-  background-color: rgb(143, 143, 143);
-}
+//body {
+//  width: 100%;
+//  height: 300vh;
+//  background-color: rgb(143, 143, 143);
+//}
 #margin {
   padding: 0 0;
   position: fixed;
@@ -31,3 +31,4 @@ body {
     height: 100%;
   }
 }
+
