--- a/app/views/previews/index.html.erb
+++ b/app/views/previews/index.html.erb
@@ -1,19 +1,81 @@
 <%#= render "scrool"  %>
 <%#= render "animation" %>
 <%#= render "basic_anime" %>
-<section>
+<%#= render "text_animation2" %>
+<div id="content">
+  <section class="travel">
+    <div class="travel__inner">
+      <div class="travel__img cover-slide">
+        <%= image_tag 'image-travel.jpg',class: "img-zoom " %>
+      </div>
+      <div class="travel__texts appear left">
+        <div class="travel__texts-inner">
+          <div class="travel__title main-title item">
+            <span class="purple">Travel</span>
+            <span>the world</span>
+          </div>
+          <div class="travel__sub sub-title item">世界中を旅しよう</div>
+          <div class="travel__description item">
+            <p>
+              世界１５０ヶ国で<br />利用できる民泊サービスです。
+            </p>
+            <p>あなたの望む宿がきっと見つかります。</p>
+          </div>
+          <div class="travel__btn item">
+            <button class="btn filled">もっと詳しく</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="houses">
+    <div>
+      <h2 class="main-title tween-animate-title">Find Your House</h2>
+      <p class="sub-title tween-animate-title">お気に入りの宿泊先を見つけましょう</p>
+      <h2 class="main-title">Find Your House</h2>
+      <p class="sub-title">お気に入りの宿泊先を見つけましょう</p>
 
-  <div class="animate-title">Start where you are.</div>
-
-</section>
-<section>
-
-  <div class="animate-title">Use what you have.</div>
-
-</section>
-<section>
-
-  <div class="animate-title">Do what you can.</div>
-
-</section>
-
+    </div>
+    <div class="houses__inner">
+      <div class="houses__item">
+        <div class="cover-slide hover-darken">
+          <%= image_tag 'villa-1.jpg',class:"bg-img zoom img-bg50",style: "background-image" %>
+        </div>
+        <p class="houses__title">House 1</p>
+      </div>
+      <div class="houses__item">
+        <div class="cover-slide hover-darken">
+          <%= image_tag 'villa-1.jpg',class:"bg-img zoom img-bg50",style: "background-image" %>
+        </div>
+        <p class="houses__title">House 2</p>
+      </div>
+      <div class="houses__item">
+        <div class="cover-slide hover-darken">
+          <%= image_tag 'villa-1.jpg',class:"bg-img zoom img-bg50",style: "background-image" %>
+        </div>
+        <p class="houses__title">House 3</p>
+      </div>
+      <div class="houses__item">
+        <div class="cover-slide hover-darken">
+          <%= image_tag 'villa-1.jpg',class:"bg-img zoom img-bg50",style: "background-image" %>
+        </div>
+        <p class="houses__title">House 4</p>
+      </div>
+      <div class="houses__item">
+        <div class="cover-slide hover-darken">
+          <%= image_tag 'villa-1.jpg',class:"bg-img zoom img-bg50",style: "background-image" %>
+        </div>
+        <p class="houses__title">House 5</p>
+      </div>
+      <div class="houses__item">
+        <div class="cover-slide hover-darken">
+          <%= image_tag 'villa-1.jpg',class:"bg-img zoom img-bg50",style: "background-image" %>
+        </div>
+        <p class="houses__title">House 6</p>
+      </div>
+      <div class="houses__btn appear up">
+        <button class="btn slide-bg item">もっと詳しく</button>
+      </div>
+    </div>
+  </section>
+</div>
